--- a/client/src/styles/Footer.css
+++ b/client/src/styles/Footer.css
@@ -1,9 +1,11 @@
 
   
   .Footer {
+    position: absolute;
     left:0px;
     bottom:0px;
     width:100%;
+    height: 5%;
     border-top: grey solid 1px;
     text-align: center;
     
