--- a/client/src/styles/LoginSignup.css
+++ b/client/src/styles/LoginSignup.css
@@ -40,4 +40,30 @@ h2{
       font-size: 30px;
       color: whitesmoke;
   }
+.page{
+    background-image: url('https://wallpaperaccess.com/full/663336.jpg');
+  
+}
 
+h3{
+    color: aliceblue;
+    text-align: center;
+    font-size: 40px;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    margin-top: 50px;
+}
+p{
+    font-size: 18px;
+   
+}
+h4{
+    color: rgb(232, 235, 226);
+    text-align: center;
+    font-size: 40px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.gally{
+    width: 300px; 
+    height: 100%; 
+    
+}
