--- a/client/src/styles/LoginSignup.css
+++ b/client/src/styles/LoginSignup.css
@@ -22,7 +22,7 @@
      border-bottom: black solid 1px;
      border-top: black solid 1px;
 }
-h2{
+.header-login{
     color: aliceblue;
     text-align: center;
     font-size: 40px;
@@ -48,14 +48,9 @@ h2{
 
 ul {
     list-style: none;
-
-h3{
-    color: aliceblue;
-    text-align: center;
-    font-size: 40px;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    margin-top: 50px;
 }
+
+
 p{
     font-size: 18px;
    
